--- a/Old Versions/index.html
+++ b/Old Versions/index.html
@@ -1,214 +1,232 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ZuCo Fleet Status Updater</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Atualizador de Status da Frota</title>
   <style>
-    :root {
-      --green: #00ff7f;
-      --black: #111;
-      --darkgreen: #31875c;
-      --white: #ffffff;
+    :root{
+      --ml-yellow:#FFE600;
+      --ml-blue:#2D3277;
+      --ml-blue-dark:#1e235c;
+      --ml-text:#333;
+      --ml-white:#ffffff;
+      --ml-border:#e6e6e6;
     }
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: var(--black);
-      color: white;
-      max-width: 700px;
-      margin: 50px auto;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 30px rgba(0, 255, 127, 0.3);
-      background: linear-gradient(160deg, #111, #1a1a1a);
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,Helvetica,sans-serif;
+      background:var(--ml-yellow);
+      color:var(--ml-text);
     }
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-      color: var(--green);
+    .wrap{
+      max-width:820px;
+      margin:48px auto;
+      padding:0 16px;
     }
-    .logo {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      margin-bottom: 10px;
+    .brand {
+     display: flex;
+      flex-direction: column; /* apila verticalmente */
+      align-items: center;    /* centra horizontalmente */
+      gap: 16px;               /* espacio entre logo y título */
     }
-    .logo img {
-      width: 200px;
-      max-width: 100%;
-      margin-bottom: 8px;
+    .brand img{height:144px;width:auto}
+    .vecfleet-logo {
+      position: fixed;
+      bottom: 2%;
+      right: 2%;
+      width: clamp(80px, 12vw, 150px); /* mínimo 80px, máximo 150px, escalando con la pantalla */
+      height: auto;
+      opacity: 0.9;
+      z-index: 9999;
     }
-    .logo-text {
-      font-size: 28px;
-      font-weight: bold;
-      color: var(--green);
-      letter-spacing: 2px;
-    }
-    label, input, button {
-      display: block;
-      width: 100%;
-      margin-top: 15px;
-    }
-    input[type="file"] {
-      padding: 8px;
-      border-radius: 6px;
-      background-color: #1f1f1f;
-      border: 1px solid #333;
-      color: var(--white);
-    }
-    button {
-      margin-top: 20px;
-      padding: 12px;
-      background: var(--green);
-      color: var(--black);
-      font-weight: bold;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    #progress-container {
-      width: 100%;
-      background-color: #333;
-      border-radius: 5px;
-      overflow: hidden;
-      margin-top: 20px;
-    }
-    #progress-bar {
-      height: 8px;
-      width: 0%;
-      background: var(--green);
-      transition: width 0.3s ease-in-out;
-    }
-    #results {
-      margin-top: 30px;
-    }
-    table {
-      width: 100%;
-      margin-top: 20px;
-      border-collapse: collapse;
-      background-color: #222;
-    }
-    th, td {
-      border: 1px solid #444;
-      padding: 8px;
-      text-align: left;
-    }
-    th {
-      background-color: var(--green);
-      color: var(--black);
+    .vecfleet-logo:hover {
+      opacity: 1;
     }
 
-    #download-link {
-      display: none;
-      margin-top: 20px;
-      text-align: center;
+
+    .brand h1{
+      font-size:20px;
+      margin:0;
+      color:var(--ml-blue);
+      font-weight:700;
+      letter-spacing:.2px;
     }
-    #download-link a {
-      color: var(--green);
-      font-weight: bold;
+    .card{
+      background:var(--ml-white);
+      border:1px solid var(--ml-border);
+      border-radius:12px;
+      padding:20px;
+      box-shadow:0 6px 18px rgba(0,0,0,.06);
     }
-    .download-btn {
-    background: var(--darkgreen);
-    color: var(--white);
+    h2{
+      color:var(--ml-blue);
+      margin:0 0 10px 0;
+      font-size:18px;
+      font-weight:700;
     }
-    
+    label{display:block;margin-top:14px;font-weight:600;color:#444}
+    input[type="file"]{
+      width:100%;
+      margin-top:6px;
+      padding:10px;
+      background:#fafafa;
+      border:1px solid var(--ml-border);
+      border-radius:8px;
+    }
+    button{
+      margin-top:18px;
+      padding:12px 14px;
+      background:var(--ml-blue);
+      color:#fff;
+      font-weight:700;
+      border:none;border-radius:10px;
+      cursor:pointer;
+    }
+    button:hover{background:var(--ml-blue-dark)}
+    .progress{
+      width:100%;
+      background:#f1f1f1;
+      border-radius:8px;
+      overflow:hidden;
+      margin-top:18px;
+      border:1px solid var(--ml-border);
+    }
+    .bar{
+      height:10px;width:0%;
+      background:var(--ml-blue);
+      transition:width .25s ease;
+    }
+    #status{margin-top:10px;font-size:14px;color:#555}
+    #download{
+      display:none;margin-top:16px;
+    }
+    .download-btn{
+      background:var(--ml-blue);
+      color:#fff;border:none;border-radius:10px;
+      padding:10px 12px;font-weight:700;cursor:pointer;
+      display: flex;justify-content: center;margin-top: 20px;
+    }
+    .download-btn:hover{background:var(--ml-blue-dark)}
+    table{
+      width:100%;margin-top:16px;border-collapse:collapse;border:1px solid var(--ml-border);
+      background:#fff;border-radius:10px;overflow:hidden
+    }
+    thead th{
+      background:var(--ml-blue);color:#fff;text-align:left;padding:10px;font-weight:700
+    }
+    tbody td{padding:10px;border-top:1px solid var(--ml-border)}
+    .muted{color:#777}
   </style>
 </head>
 <body>
-  <div class="logo">
-    <img src="/static/logo.png" alt="ZuCo Logo">
+  <div class="wrap">
+    <div class="brand">
+      <!-- Troque o src pela sua imagem/rota em produção -->
+      <img src="/static/logo_ml.png" alt="Mercado Livre">
+      <h1>Ferramenta Interna</h1>
+    </div>
+
+    <div class="card">
+      <h2>Atualizador de Status da Frota</h2>
+      <p class="muted">Carregue os arquivos, processe e baixe a planilha de atualização.</p>
+
+      <label>Arquivo da Frota (fleet-moviles.xls):</label>
+      <input type="file" id="fleet-file" />
+
+      <label>Arquivo de Disponibilidade (disponibilidad.xls):</label>
+      <input type="file" id="disp-file" />
+
+      <button id="process-btn" onclick="processar()">Processar Arquivos</button>
+
+      <div class="progress"><div id="bar" class="bar"></div></div>
+      <div id="status"></div>
+
+      <div id="download"></div>
+
+      <div id="results"></div>
+    </div>
   </div>
-
-  <h2>Fleet Status Updater</h2>
-
-  <label>Fleet File (fleet-moviles.xls):</label>
-  <input type="file" id="fleet-file">
-
-  <label>Availability File (disponibilidad.xls):</label>
-  <input type="file" id="disp-file">
-
-  <button onclick="enviarArchivos()">Process Files</button>
-
-  <div id="progress-container"><div id="progress-bar"></div></div>
-  <div id="status"></div>
-  <div id="download-link"></div>
-  <div id="results"></div>
+  <img src="/static/vecfleet.png" alt="VecFleet Logo" class="vecfleet-logo">
 
 
   <script>
-    async function enviarArchivos() {
-      const fleetFile = document.getElementById('fleet-file').files[0];
-      const dispFile = document.getElementById('disp-file').files[0];
+    async function processar(){
+      const fleet = document.getElementById('fleet-file').files[0];
+      const disp  = document.getElementById('disp-file').files[0];
       const status = document.getElementById('status');
+      const bar = document.getElementById('bar');
       const results = document.getElementById('results');
-      const download = document.getElementById('download-link');
-      const progressBar = document.getElementById('progress-bar');
+      const download = document.getElementById('download');
 
-      if (!fleetFile || !dispFile) {
-        status.innerText = '⚠️ Both files are required';
+      if(!fleet || !disp){
+        status.textContent = '⚠️ Ambos os arquivos são obrigatórios.';
         return;
       }
 
-      const formData = new FormData();
-      formData.append("fleet_file", fleetFile);
-      formData.append("disponibilidad_file", dispFile);
-
-      status.innerText = 'Processing...';
-      progressBar.style.width = '30%';
+      // Reset UI
       results.innerHTML = '';
       download.innerHTML = '';
+      download.style.display = 'none';
+      status.textContent = 'Iniciando processamento...';
+      bar.style.width = '10%';
 
-      const res = await fetch("/process", {
-        method: "POST",
-        body: formData
-      });
-
-      let data;
-      try {
-        data = await res.json();
-        progressBar.style.width = '80%';
-      } catch (e) {
-        status.innerText = '❌ Error: Invalid server response';
-        return;
-      }
-
-      if (!res.ok) {
-        status.innerText = '❌ Error: ' + (data.error || 'Unknown');
-        return;
-      }
-
-      status.innerText = '✅ Process completed';
-      
-      let progress = 0;
-      progressBar.style.width = '0%';
-      const interval = setInterval(() => {
-        if (progress < 80) {
-        progress += 1;
-        progressBar.style.width = progress + '%';
-        }
+      // Fake progress up to 85% enquanto o backend processa
+      let p = 10;
+      const anim = setInterval(() => {
+        if(p < 85){ p += 1; bar.style.width = p + '%'; }
       }, 50);
 
-      // Table
-      if (data.table_data && data.table_data.length > 0) {
-        const table = document.createElement("table");
-        const headers = Object.keys(data.table_data[0]);
-        const thead = document.createElement("thead");
-        const tr = document.createElement("tr");
-        headers.forEach(h => {
-          const th = document.createElement("th");
-          th.innerText = h;
-          tr.appendChild(th);
+      const form = new FormData();
+      form.append('fleet_file', fleet);
+      form.append('disponibilidad_file', disp);
+
+      const res = await fetch('/process', { method:'POST', body:form });
+
+      let data;
+      try{
+        data = await res.json();
+      }catch(e){
+        clearInterval(anim);
+        status.textContent = '❌ Erro: resposta inválida do servidor.';
+        return;
+      }
+
+      if(!res.ok){
+        clearInterval(anim);
+        status.textContent = '❌ Erro: ' + (data.error || 'Desconhecido');
+        return;
+      }
+
+      // Completa a barra
+      clearInterval(anim);
+      bar.style.width = '100%';
+      status.textContent = '✅ Processamento concluído.';
+
+      // Tabela (converte as chaves para PT-BR visualmente)
+      if (data.table_data && data.table_data.length > 0){
+        const headersMap = { "Estado":"Estado", "Cantidad":"Quantidade", "Porcentaje":"Porcentagem (%)" };
+
+        const table = document.createElement('table');
+        const thead = document.createElement('thead');
+        const trh = document.createElement('tr');
+
+        const headerKeys = Object.keys(data.table_data[0]);
+        headerKeys.forEach(key=>{
+          const th = document.createElement('th');
+          th.textContent = headersMap[key] || key;
+          trh.appendChild(th);
         });
-        thead.appendChild(tr);
+        thead.appendChild(trh);
         table.appendChild(thead);
 
-        const tbody = document.createElement("tbody");
-        data.table_data.forEach(row => {
-          const tr = document.createElement("tr");
-          headers.forEach(h => {
-            const td = document.createElement("td");
-            td.innerText = row[h];
+        const tbody = document.createElement('tbody');
+        data.table_data.forEach(row=>{
+          const tr = document.createElement('tr');
+          headerKeys.forEach(k=>{
+            const td = document.createElement('td');
+            td.textContent = row[k];
             tr.appendChild(td);
           });
           tbody.appendChild(tr);
@@ -217,16 +235,25 @@
         results.appendChild(table);
       }
 
-      // Download link
-      if (data.download_link) {
-        const btn = document.createElement("button");
-        btn.textContent = "⬇️ Download generated Excel";
-        btn.className = "download-btn";
-        btn.onclick = () => window.location.href = data.download_link;
-        download.innerHTML = '';
-        download.appendChild(btn);
-        download.style.display = 'block';
-      }
+      // Botão de download (chama /download para arquivo binário correto) 
+      const btn = document.createElement('button');
+      btn.className = 'download-btn';
+      btn.textContent = '📗 Baixar Excel 📗';
+      btn.onclick = async () => {
+        const r = await fetch('/download');
+        if(!r.ok){ status.textContent = '❌ Erro ao preparar o download.'; return; }
+        const blob = await r.blob();
+        const url = URL.createObjectURL(blob);
+        const a = document.createElement('a');
+        a.href = url;
+        a.download = (data.filename || 'vehicle_fleet_update.xlsx');
+        document.body.appendChild(a);
+        a.click();
+        a.remove();
+        URL.revokeObjectURL(url);
+      };
+      download.appendChild(btn);
+      download.style.display = 'block';
     }
   </script>
 </body>
